Fix wrapping on article h3

--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -90,6 +90,10 @@ article {
 
   h3 {
     margin-bottom: 0;
+
+    a {
+      white-space: normal;
+    }
   }
 }
 
